--- a/index.html
+++ b/index.html
@@ -10,5 +10,138 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <ul class="cards">
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-1.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-2.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-3.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-4.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-5.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-6.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-7.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-8.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-1.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-2.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-3.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-4.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-5.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-6.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-7.png" alt="card-image" />
+          </div>
+        </li>
+        <li class="card">
+          <div class="view front-view">
+            <span class="material-icons">question_mark</span>
+          </div>
+          <div class="view back-view">
+            <img src="images/img-8.png" alt="card-image" />
+          </div>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
